RESOLVED FIXED273200
[RenderTreeBuilder] Do not run inline layout invalidation when formatting root is also destroyed
https://bugs.webkit.org/show_bug.cgi?id=273200
Summary [RenderTreeBuilder] Do not run inline layout invalidation when formatting roo...
alan
Reported 2024-04-24 10:17:14 PDT
ssia
Attachments
Patch (18.06 KB, patch)
2024-04-24 10:35 PDT, alan
no flags
Patch (18.48 KB, patch)
2024-04-24 11:39 PDT, alan
no flags
Patch (20.58 KB, patch)
2024-04-25 06:10 PDT, alan
no flags
Patch (20.44 KB, patch)
2024-04-25 07:31 PDT, alan
no flags
Patch (17.76 KB, patch)
2024-04-25 09:27 PDT, alan
no flags
Patch (17.76 KB, patch)
2024-04-25 09:48 PDT, alan
no flags
[fast-cq]Patch (1.79 KB, patch)
2024-04-25 17:03 PDT, alan
no flags
alan
Comment 1 2024-04-24 10:35:45 PDT
Antti Koivisto
Comment 2 2024-04-24 10:55:00 PDT
Comment on attachment 471105 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=471105&action=review > Source/WebCore/rendering/updating/RenderTreeBuilder.cpp:1005 > - if (parent.renderTreeBeingDestroyed() || m_isSubtreeTeardown == IsSubtreeTeardown::Yes) > + if (parent.renderTreeBeingDestroyed() || m_isSubtreeTeardown == IsSubtreeTeardown::RootIsAlreadyDetached) IsSubtreeTeardown/m_isSubtreeTeardown could be called SubtreeTeardownTyp/ m_subtreeTeardownType since it is no longer a boolean.
alan
Comment 3 2024-04-24 11:39:11 PDT
alan
Comment 4 2024-04-25 06:10:21 PDT
alan
Comment 5 2024-04-25 07:31:57 PDT
alan
Comment 6 2024-04-25 09:27:02 PDT
alan
Comment 7 2024-04-25 09:48:01 PDT
alan
Comment 8 2024-04-25 17:03:38 PDT
Created attachment 471145 [details] [fast-cq]Patch
EWS
Comment 9 2024-04-26 06:16:17 PDT
Committed 278036@main (0d0985900329): <https://commits.webkit.org/278036@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471145 [details].
Radar WebKit Bug Importer
Comment 10 2024-04-26 06:17:16 PDT
Note You need to log in before you can comment on or make changes to this bug.