Do not run inline layout invalidation when formatting root is also destroyed https://bugs.webkit.org/show_bug.cgi?id=273200

Reviewed by Antti Koivisto.

1. Render tree tear down normally starts at leaf followed by destroying containers.
2. Invalidation code at the leaf level does not consider whether root is going to be destroy too.

It could lead to unnecessary work at leaf level which now we just skip.

* Source/WebCore/rendering/updating/RenderTreeBuilder.cpp:
(WebCore::RenderTreeBuilder::detachFromRenderElement):

Canonical link: https://commits.webkit.org/278036@main